--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: benburton.me
 description: A personal space for my skills and experience so far
+footer: Copyright Ben Burton
